[package]
name = "easy-language-config"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
ureq = { version = "2.9.1", features = ["json"] }
serde = "1.0.194"
serde_json = "1.0.111"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
strip = true # Strip debug symbols